<resources>
    <string name="app_name">Examen2_GomezAlejandro</string>
    <string name="txt_title">Mi agenda de contactos</string>
    <string name="txt_new_contact">Nuevo contacto</string>
    <string name="btn_add_contact">Agregar contacto</string>
    <string name="txt_name">Nombre:</string>
    <string name="txt_last_name">Apellido:</string>
    <string name="txt_phone">Telefono:</string>
    <string name="txt_email">E-mail:</string>
    <string name="txt_company">Compañia:</string>
    <string name="txt_color">Color:</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_call">Llamar a</string>
</resources>